--- a/kursach.ipynb
+++ b/kursach.ipynb
@@ -1405,18 +1405,19 @@
    "metadata": {},
    "source": [
     "Вообще, логика образования выбросов лежит в каких-то аксиомах, которые образуются в зависимости от того, как мы воспринимаем данные. Поэтому я предположу следующее:\n",
-    "* Объекты в датасете являются жилыми, то есть полагается, что $LifeSquare \\neq 0$ , но тем не менее будем считать, что возможны ситуации $Square = 5$\n",
+    "* Объекты в датасете являются жилыми, то есть полагается, что $LifeSquare \\neq 0$.\n",
     "* Так же будем полагать, что есть ситуации, когда $KitchenSquare = 0$, то есть речь может гипотетически идти про квартиры-студии, где четко не определена площадь кухни\n",
-    "* Единицы измерения будет считать следующие: $Square, LifeSquare, KitchenSquare - м^{2}$, а цены (судя по значениям) - тысячи долларов\n",
-    "##### Таким образом, будем считать выбросами:<br>\n",
+    "* Единицы измерения будет считать следующие: $Square, LifeSquare, KitchenSquare - m^{2}$, а цены (судя по значениям) - тысячи долларов<br>\n",
+    "##### Таким образом, будем считать выбросами:\n",
+    "<br>\n",
     "* $HouseYear > 2021$\n",
     "* $Floor = 0, HouseFloor = 0$\n",
     "* $Floor > HouseFloor$\n",
-    "* $Square < 5$\n",
+    "* $Square < 20$\n",
     "* $KitchenSquare > Square$\n",
     "* $LifeSquare > Square, LifeSquare = NaN$, опять же, исходя из того, что все дома в датасете - жилые.\n",
     "* $Rooms = 0$\n",
-    "* $(Rooms > 5,$ $\\frac{Square}{Rooms} < 30)$ - имеется ввиду логическое $И$ этих ситуаций, причем число 30 получилось как медианное от площади, которая приходится на одну комнату, то есть слишком большое число комнат при не особо большой площади.\n",
+    "* $(Rooms > 5,$ $\\frac{Square}{Rooms} < 30)$ - имеется ввиду логическое $AND$ этих ситуаций, причем число 30 получилось как медианное от площади, которая приходится на одну комнату, то есть слишком большое число комнат при не особо большой площади.\n",
     "<p><i>Вот с последнем лично у меня вопросы появляются, ибо пологаю, что можно представить какой-то жилой объект с 6-тью комнатами по ~20 квадратов каждая. Ровно, как и сложно представить жилое нечто площадью 5 квадратов (это кухня в хрущевке 60-х годов, где развернуться сложно), но тем не менее в бейслайне вообще порог в 3 квадрата был. Поэтому в силу моего очень скудного знания рынка недвижимости, положу такие критерии выбросов</i></p>"
    ]
   },
@@ -1730,7 +1731,7 @@
    "source": [
     "Общие положения по поводу этих выбросов описаны выше, а последовательность действий будет следующая:\n",
     "* Делаем фичи $SquarePerRoom = \\frac{Square}{Square}, LifeSqRatio = \\frac{LifeSquare}{Square}, KitchenSqRatio = \\frac{KitchenSquare}{Square}$, которые будем использовать сейчас для фильтрации выборки, и в дальнейшем для обучения модели, а так же медианные значения будем использовать для трансформа тестового датасета\n",
-    "* В случаях $Square < 5, Square$ делаем равными 5-ти. Значение в 600 квадратов считаем... ну, не считаем выбросом. А еще считаем, что площадь будет независимой переменной, вокруг которой будем менять другие признаки\n",
+    "* В случаях $Square < 20, Square$ делаем равными 20-ти. Значение в 600 квадратов считаем... ну, не считаем выбросом. А еще считаем, что площадь будет независимой переменной, вокруг которой будем менять другие признаки\n",
     "* В случаях $KitchenSquare > Square$ считаем медианное значение признака $KitchenSqRatio$ и умножаем выбросные $KitchenSquare$ на эту медиану, которую в свою очередь сохраняем для трансформа тестового датасета\n",
     "* Для выбросов в $Rooms$ общий принцип: считаем медиану по $SquarePerRoom$, и потом меняем все выбросные комнаты вот так $Rooms = \\left[ \\frac{Square}{median(SquarePerRoom)} \\right]+1$ квадратные скобочки - деление нацело\n",
     "* Для $LifeSquare > Square$ я определил границу в $LifeSqRatio = 1.2$ и все те, $LifeSquare$, для которых $LifeSqRatio \\in \\left[ 1, 1.2 \\right]$, будем менять местами по той же логике, что и с этажами, т.к. жилая площадь более употребительное свойство, нежели чем кухонная площадь, и в выбросных жилых площадях очень много значений, которые совсем чуть-чуть превосходят значение площади. Ну, а  $LifeSquare$, для которых $LifeSqRatio \\in \\left[ 1.2, \\infty \\right)$, будем умножать $Square$ на медианное значение $LifeSqRatio$, которое потом будем использовать для трансформа тестового датасета"
@@ -1896,6 +1897,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вот видим, что очень мало значений ниже 20 квадратов лежит"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -1908,7 +1916,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Введем новые фичи"
+    "##### Введем новые фичи"
    ]
   },
   {
@@ -2104,7 +2112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Выбросы в rooms"
+    "#### Выбросы в Rooms"
    ]
   },
   {
