another little thing changed

--- a/kursach.ipynb
+++ b/kursach.ipynb
@@ -5259,6 +5259,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "All good"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Rooms"
    ]
   },
@@ -5470,7 +5477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Те же действия и с жилой площадью. $life_sq_thld$ - граничное значение для $LifeSqRatio$. И все, что больше - скейлится медианными значением из трейна, а что лежит в промежутке $[1, 1.2]$ - меняем местами с $Square$. NaN значения заполняем так же скейлингом"
+    "Те же действия и с жилой площадью. <b>life_sq_thld</b> - граничное значение для $LifeSqRatio$. И все, что больше - скейлится медианными значением из трейна, а что лежит в промежутке $[1, 1.2]$ - меняем местами с $Square$. NaN значения заполняем так же скейлингом"
    ]
   },
   {
